flowc/tests/fixtures/resolve_e125_variant_role.expected.err
tests/fixtures/resolve_e125_variant_role.flow:5:3: error[E125]: variant 'Plan' collides with record type 'Plan'
tests/fixtures/resolve_e125_variant_role.flow:1:1: note: record type 'Plan' declared here
