flowc/tests/fixtures/resolve_e125_variant_role.flow
type Plan = { id: string }

type Outcome =
  | Approved { plan: Plan }
  | Plan { id: string }

flow decide(string) -> Outcome {
  Approved { plan: Plan { id: it } }
}
